<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MagicTool</string>

    <string name="Fragment_vew_left_home">扫描</string>
    <string name="Fragment_vew_left_habit">管理</string>
    <string name="Fragment_vew_left_setting">设置</string>
    
    <string name="take_photo">扫描</string>
    <string name="manage_data">管理照片</string>
    <string name="setting_system">设置系统</string>

    <string name="scan_barcode">扫描条码</string>
    <string name="Setting_title">设置</string>
    <string name="Setting_serverAddr">服务器地址</string>
    <string name="Setting_email">邮箱:rangh@foxmail.com</string>
    <string name="Setting_aboutme">作者:rangh</string>
    <string name="Setting_systemExit">退出</string>

    <string name="alert_title">系统提示</string>
    <string name="alert_info">确定要退出吗？</string>
    <string name="alert_ok">确定</string>
    <string name="alert_cancel">取消</string>

</resources>
